--- a/RecipesProject/RecipesProject.csproj
+++ b/RecipesProject/RecipesProject.csproj
@@ -19,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.12" />
+    <PackageReference Include="Python.Runtime" Version="2.7.9" />
   </ItemGroup>
 
 </Project>
